# finance-investments

./: .gitignore  README.md  pyproject.toml
docs/: notes.md
docs/csv/: example_excel.xlsx
finance-investments/important_tools/: importing_csv_excel.py  importing_yahoo.py  time_series.py
finance-investments/importanttools/: importing_csv_excel.py  importing_iex.py  importing_yahoo.py
finance-investments/mathematics/: covariance_correlation.py  log_return.py  portifolio_risk.py  rate_return.py  return_indices.py  return_portifolio_securities.py  risk_security.py
