[tool.poetry]
name = "finance-investments"
version = "0.1.0"
description = ""
authors = ["katewitkoski <ka.lwitkoski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
