[tool.poetry]
name = "finance-investments"
version = "0.1.0"
description = ""
authors = ["katewitkoski <ka.lwitkoski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
pandas-datareader = "^0.10.0"
numpy = "^1.26.2"
yfinance = "^0.2.32"
quandl = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
